--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,21 @@
+@TechReport{      dfo2019ifmp,
+  title         = {{Pacific Region Integrated Fishery Management Plan}.
+                  {Groundfish}. {Effective February} 21, 2019
+                  {\url{https://www.pac.dfo-mpo.gc.ca/fm-gp/mplans/ground-fond-ifmp-pgip-sm-eng.html}}},
+  author        = {DFO},
+  year          = {2019}
+}
+
+@Article{         cox2020,
+  title         = {Evaluation of potential rebuilding strategies for {Outside
+                  Yelloweye Rockfish} in {British Columbia}},
+  journal       = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  volume        = {2019/041},
+  author        = {Cox, Sean P. and Doherty, Beau and Benson, Ashleen J. and
+                  Johnson, Samuel {DN} and Haggarty, Dana},
+  year          = {2020}
+}
+
 @article{laurel2020,
   title = {Loss of Spawning Habitat and Prerecruits of {{Pacific}} Cod during a {{Gulf}} of {{Alaska}} Heatwave},
   author = {Laurel, Benjamin J. and Rogers, Lauren A.},
