--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -4,6 +4,7 @@ author: ""
 output:
   bookdown::word_document2:
     reference_docx: "sopo-2021-template.docx"
+    number_sections: false
 fontsize: 12pt
 bibliography: "refs.bib"
 csl: "csas.csl"
@@ -101,32 +102,21 @@ We develop a Bayesian state-space time-series model to explore trends in these m
 To do this, we build on a model described in @hilborn2020 in two ways: (1) we incorporate uncertainty in stock-specific status and (2) we project the latent underlying stock-specific status forward to the last year (2020).
 The latter accounts for not all stocks having an up-to-date stock assessment and accounts for future possible stock states based on the time-series properties of the fitted stock trajectories.
 
-Using $x_t$ to denote **log** stock status at time $t$, we model $x_t$ as
-$$
-\begin{aligned}
-x_{t=1} &=  x_0 ,\\
-x_{t>1} &= x_{t-1} + \eta_t, \;
-      \eta_t \sim \mathrm{Normal}
-      \left( 0, \sigma_{\eta}^2 \right),
-\end{aligned}
-$$
+Using $x_t$ to denote log stock status at time $t$, we modelled $x_t$ as
+$x_{t=1} = x_0$ and $x_{t>1} = x_{t-1} + \eta_t, \; \eta_t \sim \mathrm{Normal} \left( 0, \sigma_{\eta}^2 \right)$, 
 where $\eta_t$ is a random walk deviation with standard deviation $\sigma_\eta$.
-We assume an auto-regressive observation model:
-$$
-\begin{aligned}
-\hat{y}_{j,t} &\sim \mathrm{Normal} \left( y_{j,t}, \hat{\tau}^2\right),\\
-y_{j,t} &= x_{t} + \alpha_j + \epsilon_{j,t}, \;
-      \epsilon_{j,t} \sim \mathrm{Normal}
-      \left(\rho \epsilon_{j,t-1}, \sigma_{\epsilon}^2 \right),
-\end{aligned}
-$$
+We assumed an auto-regressive observation model:
+$\hat{y}_{j,t} \sim \mathrm{Normal}\left( y_{j,t}, \hat{\tau}^2\right),$
+$y_{j,t} = x_{t} + \alpha_j + \epsilon_{j,t}, \;
+\epsilon_{j,t} \sim \mathrm{Normal}
+\left(\rho \epsilon_{j,t-1}, \sigma_{\epsilon}^2 \right)$,
 where $\hat{y}_{j,t}$ is the mean log stock status for stock $j$ and time $t$ (from an assessment), $y_{j,t}$ is the unobserved "true" mean stock-specific status, and $\hat{\tau}$ is the standard deviation of the log stock status from an assessment.
-We group Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$ and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock trajectories were considerably more "wiggly" for these species).
+We grouped Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$ and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock trajectories were considerably more "wiggly" for these species).
 The symbol $\alpha_j$ represents a stock-specific intercept that is constrained such that the sum of all $\alpha_j$ is zero to make the overall mean $x_t$ identifiable.
 The symbol $\epsilon_{j,t}$ represents a first-order autoregressive (AR1) deviation with correlation $\rho$ and standard deviation $\sigma_\epsilon$.
-We place half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$, Normal(0, 5^2^) priors on $x_0$ and $\alpha_j$, and a Normal(0, 1)[-1, 1] prior on $\rho$.
+We placed half-Normal(0, 1) priors on $\sigma_{\epsilon}$ and $\sigma_{\eta}$, Normal(0, 5^2^) priors on $x_0$ and $\alpha_j$, and a Normal(0, 1)[-1, 1] prior on $\rho$.
 We fit the models with Stan [@carpenter2017; @rstan2020], sampling 1000 iterations on each of 6 chains and discarding the first half as warm up.
-Data and code for our analysis are available at \url{https://github.com/pbs-assess/gftrends}.
+Data and code for our analysis are available at <https://github.com/pbs-assess/gftrends>.
 
 ## Status and trends
 
