--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -96,20 +96,24 @@ The USR defines the breakpoint between the healthy and cautious zone and the LRP
 The LRP and USR are often calculated based on B~MSY~ (biomass at maximum sustainable yield) at provisional levels of 0.4 and 0.8 B~MSY~, but in other cases are based on historical reference points (historical biomass values that match the definition of the LRP or USR).
 
 Assessment scientists conduct regular stock assessment of major fish stocks in BC.
-These assessments combine fishery-dependent data, such as catches, and fishery-independent data (data from scientific surveys), to estimate quantities such as growth, natural mortality, and maturity, and ultimately derive measures of stock status and fishing intensity.
-Here, we gather output data from these assessments representing the posterior distribution of biomass compared to three measures of stock status: (1) B/B~MSY~ (biomass divided by B~MSY~), (2) B/USR (biomass divided by the USR), and (3) B/LRP (biomass divided by the LRP).
+These assessments combine fishery-dependent data, such as catches, and fishery-independent data (data from scientific surveys), to estimate quantities such as growth, natural mortality, and maturity, and derive measures of stock status and fishing intensity.
+Here, we gathered output data from these assessments representing the posterior distribution of biomass compared to three measures of stock status: (1) B/B~MSY~ (biomass divided by B~MSY~), (2) B/USR (biomass divided by the USR), and (3) B/LRP (biomass divided by the LRP).
 We develop a Bayesian state-space time-series model to explore trends in these measures of status across stocks until the year 2020.
-To do this, we build on a model described in @hilborn2020 in two ways: (1) we incorporate uncertainty in stock-specific status and (2) we project the latent underlying stock-specific status forward to the last year (2020).
+To do this, we built on a model described in @hilborn2020 in two ways: (1) we incorporated uncertainty in stock-specific status and (2) we projected the latent underlying stock-specific status forward to the last year (2020).
 The latter accounts for not all stocks having an up-to-date stock assessment and accounts for future possible stock states based on the time-series properties of the fitted stock trajectories.
 
 Using $x_t$ to denote log stock status at time $t$, we modelled $x_t$ as
 $x_{t=1} = x_0$ and $x_{t>1} = x_{t-1} + \eta_t, \; \eta_t \sim \mathrm{Normal} \left( 0, \sigma_{\eta}^2 \right)$, 
 where $\eta_t$ is a random walk deviation with standard deviation $\sigma_\eta$.
 We assumed an auto-regressive observation model:
-$\hat{y}_{j,t} \sim \mathrm{Normal}\left( y_{j,t}, \hat{\tau}^2\right),$
-$y_{j,t} = x_{t} + \alpha_j + \epsilon_{j,t}, \;
-\epsilon_{j,t} \sim \mathrm{Normal}
-\left(\rho \epsilon_{j,t-1}, \sigma_{\epsilon}^2 \right)$,
+$$
+\begin{aligned}
+\hat{y}_{j,t} &\sim \mathrm{Normal} \left( y_{j,t}, \hat{\tau}^2\right),\\
+y_{j,t} &= x_{t} + \alpha_j + \epsilon_{j,t}, \;
+      \epsilon_{j,t} \sim \mathrm{Normal}
+      \left(\rho \epsilon_{j,t-1}, \sigma_{\epsilon}^2 \right),
+\end{aligned}
+$$
 where $\hat{y}_{j,t}$ is the mean log stock status for stock $j$ and time $t$ (from an assessment), $y_{j,t}$ is the unobserved "true" mean stock-specific status, and $\hat{\tau}$ is the standard deviation of the log stock status from an assessment.
 We grouped Pacific Cod and Walleye Pollock stocks to share a $\rho$ and $\sigma_{\epsilon}$ and all other stock to share another $\rho$ and $\sigma_{\epsilon}$ (stock trajectories were considerably more "wiggly" for these species).
 The symbol $\alpha_j$ represents a stock-specific intercept that is constrained such that the sum of all $\alpha_j$ is zero to make the overall mean $x_t$ identifiable.
