possible implications statement?

--- a/text/gf2021-sopo.Rmd
+++ b/text/gf2021-sopo.Rmd
@@ -175,6 +175,7 @@ Conversely, other stocks (e.g., Bocaccio REF) have experienced periods of extrem
 ## Implications of those trends
 
 *Skip for space? Not sure what exactly to say*
+This in depth look at trends across those species for which we have sufficient data to produce stock assessments provides a useful test of this multispecies approach. In future years, we will apply a similar approach to survey indices and be able to contrast the trajectories and projections based on different data types. 
 
 ## References
 
