--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,11 @@
+@article{dfo2020bocaccio,
+  author  = {{DFO}},
+  year    = {2020},
+  title   = {Bocaccio ({\emph{Sebastes paucispinis}}) stock assessment for {British Columbia} in 2019, including guidance for rebuilding plans},
+  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  volume  = {2020/025}
+}
+
 @TechReport{      dfo2019ifmp,
   title         = {{Pacific Region Integrated Fishery Management Plan}.
                   {Groundfish}. {Effective February} 21, 2019
