Colour tweaks, refs

--- a/text/refs.bib
+++ b/text/refs.bib
@@ -1,3 +1,16 @@
+
+@article{schroeder2018,
+  title = {Source Water Variability as a Driver of Rockfish Recruitment in the {{California Current Ecosystem}}: Implications for Climate Change and Fisheries Management},
+  author = {Schroeder, Isaac D. and Santora, Jarrod A. and Bograd, Steven J. and Hazen, Elliott L. and Sakuma, Keith M. and Moore, Andrew M. and Edwards, Christopher A. and Wells, Brian K. and Field, John C.},
+  year = {2018},
+  publisher = {{NRC Research Press}},
+  doi = {10.1139/cjfas-2017-0480},
+  copyright = {Published by NRC Research Press},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  language = {en}
+}
+
+
 @article{dfo2020bocaccio,
   author  = {{DFO}},
   year    = {2020},
